kubernetes/apps/grindtrack/base/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: grindtrack
spec:
  selector:
    app: grindtrack
  ports:
    - name: http
      port: 8080
      targetPort: http
